# strip-codeblocks

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: lib.rs
